# sentry-rust

./: .appveyor.yml  .codecov.yml  .craft.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCUMENTATION_IMPROVEMENTS.md  Makefile  PII_PREVENTION_IMPLEMENTATION.md  README.md  README.tpl  Readme.md  SENTRY_DEBUG_LOGGING_IMPROVEMENTS.md  aliases.js  appveyor.yml  build.rs  client-reports-spec-compliance.md  clippy.toml  index.html  params.json  pi-session-2026-02-16T16-21-39-591Z_b8b1f2f3-5399-49fa-9c36-a00791f330e8.html  pr-findings.md  rustfmt.toml  search-index.js  sentry_performance_optimizations.md  sentry_rust_quality_review.md  sentry_span_log_optimizations.md  settings.html  source-files.js  warden.toml
integrations/sentry-actix/: Cargo.toml  README.md
sentry/: Cargo.toml  ChronoParseError.t.html  Hub.t.html  README.md  add_breadcrumb.v.html  all.html  build.rs  capture_message.v.html  enum.Level.html  enum.UuidVariant.html  enum.UuidVersion.html  fn.add_breadcrumb.html  fn.apply_defaults.html  fn.capture_error.html  fn.capture_event.html  fn.capture_message.html  fn.configure_scope.html  fn.event_from_error.html  fn.init.html  fn.last_event_id.html  fn.parse_type_from_debug.html  fn.with_integration.html  fn.with_scope.html  index.html  macro.release_name.html  macro.sentry_crate_release!.html  macro.sentry_crate_release.html  sidebar-items.js  struct.Breadcrumb.html  struct.ChronoParseError.html  struct.Client.html  struct.ClientInitGuard.html  struct.ClientOptions.html  struct.DateTime.html  struct.DebugId.html  struct.Dsn.html  struct.Future.html  struct.Hub.html  struct.ParseDebugIdError.html  struct.Scope.html  (+12 more)
sentry-actix/: Cargo.toml  README.md
sentry-actix/examples/: basic.rs
sentry-actix/src/: lib.rs
sentry-anyhow/: Cargo.toml  LICENSE  README.md
sentry-anyhow/src/: lib.rs
sentry-backtrace/: Cargo.toml  README.md
sentry-backtrace/src/: integration.rs  lib.rs  parse.rs  process.rs  trim.rs  utils.rs
sentry-contexts/: Cargo.toml  README.md  build.rs
sentry-contexts/src/: integration.rs  lib.rs  utils.rs
sentry-core/: Cargo.toml  LICENSE  README.md  build.rs
sentry-core/benches/: scope_benchmark.rs
sentry-core/src/: api.rs  backtrace_support.rs  batcher.rs  breadcrumbs.rs  cadence.rs  client.rs  clientoptions.rs  constants.rs  envelope.rs  error.rs  eventprocessor.rs  futures.rs  hub.rs  hub_impl.rs  integration.rs  intodsn.rs  lib.rs  logger.rs  logs.rs  macros.rs  metrics.rs  metrics_api.rs  performance.rs  profiling.rs  scope.rs  session.rs  stack.rs  stream.rs  telemetry.rs  test.rs  tracing.rs  transport.rs  units.rs  utils.rs
sentry-core/tests/: client_reports.rs  metrics.rs  switch_guard_tls_teardown.rs  trace_continuation.rs
sentry-debug-images/: Cargo.toml  README.md
sentry-debug-images/src/: images.rs  integration.rs  lib.rs  unix.rs
sentry-error-chain/: Cargo.toml  README.md
sentry-error-chain/src/: lib.rs
sentry-failure/: Cargo.toml  README.md
sentry-failure/src/: lib.rs
sentry-log/: Cargo.toml  README.md
sentry-log/src/: converters.rs  filters.rs  integration.rs  lib.rs  logger.rs
sentry-opentelemetry/: Cargo.toml  README.md
sentry-opentelemetry/src/: context.rs  converters.rs  lib.rs  processor.rs  propagator.rs
sentry-opentelemetry/tests/: associates_event_with_span.rs  captures_transaction.rs  captures_transaction_with_nested_spans.rs  creates_distributed_trace.rs  integration.rs  shared.rs
sentry-panic/: Cargo.toml  README.md
sentry-panic/src/: lib.rs
sentry-runtime-metrics/: Cargo.toml  LICENSE  README.md
sentry-runtime-metrics/examples/: runtime-metrics-demo.rs
sentry-runtime-metrics/src/: collector.rs  config.rs  integration.rs  lib.rs  protocol.rs
sentry-slog/: Cargo.toml  README.md
sentry-slog/src/: converters.rs  drain.rs  integration.rs  lib.rs
sentry-time/: Cargo.toml
sentry-time/src/: lib.rs
sentry-tower/: Cargo.toml  README.md
sentry-tower/src/: helloworld.rs  http.rs  lib.rs
sentry-tracing/: Cargo.toml  README.md
sentry-tracing/benches/: tracing_layer_perf.rs
sentry-tracing/src/: converters.rs  layer.rs  lib.rs
sentry-tracing/tests/: README.md  await_cross_thread_guard.rs  breadcrumbs.rs  dynamic_updates.rs  future_cross_thread_info_span.rs  future_cross_thread_trace_span.rs  futures_same_thread_info_span.rs  name_op_updates.rs  no_client_event.rs  shared.rs  smoke.rs  span_cross_thread.rs  span_reentrancy.rs  tracing.rs
sentry-types/: Cargo.toml  README.md  output.json
sentry-types/src/: auth.rs  crontab_validator.rs  dsn.rs  indexed_enum.rs  lib.rs  macros.rs  project_id.rs  utils.rs
sentry-types/tests/: test_auth.rs  test_protocol_v7.rs
sentry/api/: DebugId.t.html  Dsn.t.html  capture_event.v.html  configure_scope.v.html  enum.Level.html  enum.UuidVariant.html  enum.UuidVersion.html  fn.add_breadcrumb.html  fn.capture_event.html  fn.capture_message.html  fn.configure_scope.html  fn.last_event_id.html  fn.with_scope.html  last_event_id.v.html  struct.Breadcrumb.html  struct.ChronoParseError.html  struct.DateTime.html  struct.DebugId.html  struct.Dsn.html  struct.ParseDebugIdError.html  struct.User.html  struct.Utc.html  struct.Uuid.html  trait.TimeZone.html
sentry/client/: ClientInitGuard.t.html  ClientOptions.t.html  struct.Client.html  struct.ClientInitGuard.html  struct.ClientOptions.html  trait.IntoDsn.html
sentry/defaults/: fn.apply_defaults.html
sentry/examples/: anyhow-demo.rs  before-send.rs  error-chain-demo.rs  event-processors.rs  failure-demo.rs  health.rs  init-with-client.rs  log-demo.rs  message-demo.rs  panic-demo.rs  performance-demo.rs  send-with-extra.rs  thread-demo.rs  tracing-demo.rs
sentry/hub/: struct.Hub.html  trait.IntoBreadcrumbs.html
sentry/init/: fn.init.html  struct.ClientInitGuard.html
sentry/integrations/: index.html  sidebar-items.js
sentry/internals/: DsnParseError.t.html  IntoBreadcrumbs.t.html  IntoDsn.t.html  ProjectIdParseError.t.html  Scheme.t.html  TransportFactory.t.html  enum.DsnParseError.html  enum.ParseAuthError.html  enum.ParseDsnError.html  (+29 more)
(+1142 files in other folders)
