[workspace]
resolver = "2"
members = [
    "sentry",
    "sentry-actix",
    "sentry-anyhow",
    "sentry-backtrace",
    "sentry-contexts",
    "sentry-core",
    "sentry-debug-images",
    "sentry-log",
    "sentry-opentelemetry",
    "sentry-panic",
    "sentry-slog",
    "sentry-tower",
    "sentry-tracing",
    "sentry-types",
]

[workspace.package]
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
edition = "2021"
rust-version = "1.81"
