[workspace]
resolver = "2"
members = [
    "sentry",
    "sentry-actix",
    "sentry-anyhow",
    "sentry-backtrace",
    "sentry-contexts",
    "sentry-core",
    "sentry-debug-images",
    "sentry-log",
    "sentry-opentelemetry",
    "sentry-panic",
    "sentry-slog",
    "sentry-tower",
    "sentry-tracing",
    "sentry-types",
]

[workspace.package]
authors = ["Sentry <hello@sentry.io>"]
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
edition = "2021"
rust-version = "1.88"

[workspace.lints.clippy]
arithmetic-side-effects.level = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[workspace.dependencies]
actix-http = "3.12"
actix-web = { version = "4", default-features = false }
anyhow = "1.0.77"
axum = { version = "0.8", default-features = false }
backtrace = "0.3.44"
bitflags = "2.9.4"
bytes = "1.11.1"
cfg_aliases = "0.2.1"
criterion = "0.5"
curl = "0.4.25"
debugid = "0.8.0"
embedded-svc = "0.28.1"
erased-serde = "0.3.12"
esp-idf-svc = "0.51.0"
findshlibs = "=0.10.2"
futures = "0.3.24"
futures-util = { version = "0.3.5", default-features = false }
hex = "0.4.3"
hostname = "0.4"
http = "1.0.0"
httpdate = "1.0.0"
libc = "0.2.66"
log = "0.4.8"
native-tls = "0.2.8"
opentelemetry = { version = "0.29.0", default-features = false }
opentelemetry_sdk = { version = "0.29.0", default-features = false }
os_info = "3.5.0"
pin-project = "1.0.10"
pretty_env_logger = "0.5.0"
prost = "0.13.3"
rand = "0.9.3"
rayon = "1.5.3"
regex = { version = "1.5.5", default-features = false }
reqwest = { version = "0.13.2", default-features = false }
rstest = "0.25.0"
rustc_version = "0.4.0"
rustls = { version = "0.23.18", default-features = false }
sentry = { version = "0.48.5", path = "sentry", default-features = false }
sentry-actix = { version = "0.48.5", path = "sentry-actix", default-features = false }
sentry-anyhow = { version = "0.48.5", path = "sentry-anyhow", default-features = false, features = ["backtrace"] }
sentry-backtrace = { version = "0.48.5", path = "sentry-backtrace", default-features = false }
sentry-contexts = { version = "0.48.5", path = "sentry-contexts", default-features = false }
sentry-core = { version = "0.48.5", path = "sentry-core", default-features = false }
sentry-debug-images = { version = "0.48.5", path = "sentry-debug-images", default-features = false }
sentry-log = { version = "0.48.5", path = "sentry-log", default-features = false }
sentry-opentelemetry = { version = "0.48.5", path = "sentry-opentelemetry", default-features = false }
sentry-panic = { version = "0.48.5", path = "sentry-panic", default-features = false }
sentry-slog = { version = "0.48.5", path = "sentry-slog", default-features = false }
sentry-tower = { version = "0.48.5", path = "sentry-tower", default-features = false }
sentry-tracing = { version = "0.48.5", path = "sentry-tracing", default-features = false }
sentry-types = { version = "0.48.5", path = "sentry-types", default-features = false, features = ["protocol"] }
serde = "1.0.117"
serde_json = "1.0.48"
slog = "2.5.2"
thiserror = "2.0.12"
time = "0.3.47"
tokio = "1.44"
tonic = "0.12.3"
tower = "0.5.2"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3.20", default-features = false }
uname = "0.1.1"
ureq = { version = "3.0.11", default-features = false }
url = "2.2.2"
uuid = "1.0.0"
