[package]
name = "sentry-actix"
version = "0.45.0"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Sentry client extension for actix-web 3.
"""
edition = "2021"
rust-version = "1.81"

[features]
default = ["release-health"]
release-health = ["sentry-core/release-health"]

[dependencies]
actix-web = { version = "4", default-features = false }
bytes = "1.2"
futures-util = { version = "0.3.5", default-features = false }
sentry-core = { version = "0.45.0", path = "../sentry-core", default-features = false, features = [
    "client",
] }
actix-http = "3.10"

[dev-dependencies]
actix-web = { version = "4" }
futures = "0.3"
sentry = { path = "../sentry", features = ["test"] }
tokio = { version = "1.44", features = ["full"] }
