[package]
name = "sentry-actix"
version = "0.46.1"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for actix-web 4.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["release-health"]
release-health = ["sentry-core/release-health"]

[dependencies]
actix-web = { version = "4", default-features = false }
bytes = "1.2"
futures-util = { version = "0.3.5", default-features = false }
sentry-core = { version = "0.46.1", path = "../sentry-core", default-features = false, features = [
    "client",
] }
actix-http = "3.10"

[dev-dependencies]
actix-web = { version = "4" }
futures = "0.3"
sentry = { path = "../sentry", features = ["test"] }
tokio = { version = "1.44", features = ["full"] }
