[package]
name = "sentry-actix"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for actix-web 4.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[features]
default = ["release-health"]
release-health = ["sentry-core/release-health"]

[dependencies]
actix-web = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
sentry-core = { workspace = true, features = ["client"] }
actix-http = { workspace = true }

[dev-dependencies]
actix-web = { workspace = true, features = ["macros"] }
futures = { workspace = true }
sentry = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["full"] }
