[package]
name = "sentry-anyhow"
version = "0.46.2"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for anyhow.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["backtrace"]
backtrace = []

[dependencies]
sentry-backtrace = { version = "0.46.2", path = "../sentry-backtrace" }
sentry-core = { version = "0.46.2", path = "../sentry-core" }
anyhow = "1.0.77"

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
