[package]
name = "sentry-anyhow"
version = "0.46.1"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for anyhow.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["backtrace"]
backtrace = []

[dependencies]
sentry-backtrace = { version = "0.46.1", path = "../sentry-backtrace" }
sentry-core = { version = "0.46.1", path = "../sentry-core" }
anyhow = "1.0.77"

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
