[package]
name = "sentry-anyhow"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for anyhow.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[features]
default = ["backtrace"]
backtrace = []

[dependencies]
sentry-backtrace = { workspace = true }
sentry-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
sentry = { workspace = true, features = ["test"] }
