[package]
name = "sentry-backtrace"
version = "0.38.0"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Sentry integration and utilities for dealing with stacktraces.
"""
edition = "2021"
rust-version = "1.81"

[dependencies]
backtrace = "0.3.44"
regex = { version = "1.5.5", default-features = false, features = [
    "std",
    "unicode-perl",
] }
sentry-core = { version = "0.38.0", path = "../sentry-core" }
