[package]
name = "sentry-backtrace"
version = "0.46.1"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration and utilities for dealing with stacktraces.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
backtrace = "0.3.44"
regex = { version = "1.5.5", default-features = false, features = [
    "std",
    "unicode-perl",
] }
sentry-core = { version = "0.46.1", path = "../sentry-core" }
