[package]
name = "sentry-backtrace"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration and utilities for dealing with stacktraces.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
backtrace = { workspace = true }
regex = { workspace = true, features = ["std", "unicode-perl"] }
sentry-core = { version = "0.48.5", path = "../sentry-core" }
