[package]
name = "sentry-contexts"
version = "0.47.0"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for os, device, and rust contexts.
"""
build = "build.rs"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sentry-core = { version = "0.47.0", path = "../sentry-core" }
libc = "0.2.66"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hostname = "0.4"

[target.'cfg(all(not(windows), not(target_arch = "wasm32")))'.dependencies]
uname = "0.1.1"

[target."cfg(windows)".dependencies]
os_info = "3.5.0"

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
