[package]
name = "sentry-contexts"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for os, device, and rust contexts.
"""
build = "build.rs"
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
sentry-core = { workspace = true }
libc = { workspace = true }
hostname = { workspace = true }

[target."cfg(not(windows))".dependencies]
uname = { workspace = true }

[target."cfg(windows)".dependencies]
os_info = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[dev-dependencies]
sentry = { workspace = true, features = ["test"] }
