[package]
name = "sentry-core"
version = "0.42.0"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Core sentry library used for instrumentation and integration development.
"""
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "scope_benchmark"
harness = false

[features]
default = []
client = ["rand"]
test = ["client", "release-health"]
release-health = []
logs = []

[dependencies]
log = { version = "0.4.8", optional = true, features = ["std"] }
rand = { version = "0.9.0", optional = true }
sentry-types = { version = "0.42.0", path = "../sentry-types" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.46" }
url = { version = "2.1.1" }
uuid = { version = "1.0.0", features = ["v4", "serde"], optional = true }

[dev-dependencies]
# Because we re-export all the public API in `sentry`, we actually run all the
# doctests using the `sentry` crate. This also takes care of the doctest
# limitation documented in https://github.com/rust-lang/rust/issues/45599.
sentry = { path = "../sentry", default-features = false, features = [
    "test",
    "transport",
] }
anyhow = "1.0.30"
criterion = "0.5"
futures = "0.3.24"
rayon = "1.5.3"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
