[package]
name = "sentry-core"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Core Sentry library used for instrumentation and integration development.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "scope_benchmark"
harness = false

[features]
default = []
client = ["rand"]
test = ["client", "release-health"]
release-health = []
logs = []
metrics = []

[dependencies]
log = { workspace = true, features = ["std"], optional = true }
rand = { workspace = true, optional = true }
sentry-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"], optional = true }

[dev-dependencies]
# Because we re-export all the public API in `sentry`, we actually run all the
# doctests using the `sentry` crate. This also takes care of the doctest
# limitation documented in https://github.com/rust-lang/rust/issues/45599.
sentry = { workspace = true, features = ["test", "transport", "metrics"] }
anyhow = { workspace = true }
criterion = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
