[package]
name = "sentry-debug-images"
version = "0.40.0"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Sentry integration that adds the list of loaded libraries to events.
"""
edition = "2021"
rust-version = "1.81"

[dependencies]
findshlibs = "=0.10.2"
sentry-core = { version = "0.40.0", path = "../sentry-core" }
