[package]
name = "sentry-debug-images"
version = "0.46.1"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration that adds the list of loaded libraries to events.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
findshlibs = "=0.10.2"
sentry-core = { version = "0.46.1", path = "../sentry-core" }
