[package]
name = "sentry-error-chain"
version = "0.1.0"
authors = ["Sentry <hello@sentry.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://github.com/getsentry/sentry-rust"
documentation = "https://getsentry.github.io/sentry-rust"
description = """
Sentry integration that allows capturing error-chain errors
"""
edition = "2018"

[dependencies]
sentry-core = { version = "0.18.0", path = "../sentry-core", features = ["with_backtrace"] }
error-chain = "0.12.1"

[dev-dependencies]
sentry = { version = "0.18.0", path = "../sentry" }
