[package]
name = "sentry-error-chain"
version = "0.19.0"
authors = ["Sentry <hello@sentry.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Sentry integration that allows capturing error-chain errors.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
sentry-core = { version = "0.19.0", path = "../sentry-core" }
sentry-backtrace = { version = "0.19.0", path = "../sentry-backtrace" }
error-chain = "0.12.1"

[dev-dependencies]
sentry = { version = "0.19.0", path = "../sentry", default-features = false, features = ["test"] }
