[package]
name = "sentry-failure"
version = "0.18.0"
authors = ["Sentry <hello@sentry.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://github.com/getsentry/sentry-rust"
documentation = "https://getsentry.github.io/sentry-rust"
description = """
Sentry Integration for failure crate
"""
edition = "2018"

[dependencies]
sentry-core = { version = "0.18.0", path = "../sentry-core" }
sentry-backtrace = { version = "0.18.0", path = "../sentry-backtrace" }
failure = "0.1.6"

[dev-dependencies]
sentry = { version = "0.18.0", path = "../sentry" }
sentry-panic = { version = "0.18.0", path = "../sentry-panic" }
