[package]
name = "sentry-log"
version = "0.46.1"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for the log and env_logger crates.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
logs = ["sentry-core/logs"]

[dependencies]
sentry-core = { version = "0.46.1", path = "../sentry-core" }
log = { version = "0.4.8", features = ["std", "kv"] }
bitflags = "2.9.4"

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
pretty_env_logger = "0.5.0"
