[package]
name = "sentry-log"
version = "0.46.2"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Sentry integration for the log and env_logger crates.
"""
edition = "2021"
rust-version = "1.81"

[features]
default = []
logs = ["sentry-core/logs"]

[dependencies]
sentry-core = { version = "0.46.2", path = "../sentry-core" }
log = { version = "0.4.8", features = ["std", "kv"] }
bitflags = "2.9.4"

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
pretty_env_logger = "0.5.0"
