[package]
name = "sentry-log"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for the log and env_logger crates.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[features]
default = []
logs = ["sentry-core/logs"]

[dependencies]
sentry-core = { version = "0.48.5", path = "../sentry-core" }
log = { workspace = true, features = ["std", "kv"] }
bitflags = { workspace = true }

[dev-dependencies]
sentry = { workspace = true, features = ["test"] }
pretty_env_logger = { workspace = true }
