[package]
name = "sentry-opentelemetry"
version = "0.46.1"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for OpenTelemetry.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
sentry-core = { version = "0.46.1", path = "../sentry-core", features = [
    "client",
] }
opentelemetry = { version = "0.29.0", default-features = false }
opentelemetry_sdk = { version = "0.29.0", default-features = false, features = [
    "trace",
] }

[dev-dependencies]
sentry = { path = "../sentry", features = ["test", "opentelemetry"] }
sentry-core = { path = "../sentry-core", features = [ "test" ] }
opentelemetry_sdk = { version = "0.29.0", default-features = false, features = [
    "trace",
    "testing",
] }
