[package]
name = "sentry-opentelemetry"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for OpenTelemetry.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
sentry-core = { version = "0.48.5", path = "../sentry-core", features = [
    "client",
] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }

[dev-dependencies]
sentry = { workspace = true, features = ["test", "opentelemetry"] }
sentry-core = { path = "../sentry-core", features = [ "test" ] }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
