[package]
name = "sentry-panic"
version = "0.46.1"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for capturing panics.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sentry-core = { version = "0.46.1", path = "../sentry-core", features = ["client"] }
sentry-backtrace = { version = "0.46.1", path = "../sentry-backtrace" }

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
