[package]
name = "sentry-panic"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for capturing panics.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
sentry-core = { workspace = true, features = ["client"] }
sentry-backtrace = { workspace = true }

[dev-dependencies]
sentry = { workspace = true, features = ["test"] }
