[package]
name = "sentry-slog"
version = "0.39.0"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Sentry integration for the slog crate.
"""
edition = "2021"
rust-version = "1.81"

[dependencies]
sentry-core = { version = "0.39.0", path = "../sentry-core" }
slog = { version = "2.5.2", features = ["nested-values"] }
serde_json = "1.0.46"

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
serde = "1.0.117"
erased-serde = "0.3.12"
