[package]
name = "sentry-slog"
version = "0.46.2"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for the slog crate.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sentry-core = { version = "0.46.2", path = "../sentry-core" }
slog = { version = "2.5.2", features = ["nested-values"] }
serde_json = "1.0.46"

[dev-dependencies]
sentry = { path = "../sentry", default-features = false, features = ["test"] }
serde = "1.0.117"
erased-serde = "0.3.12"
