[package]
name = "sentry-slog"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for the slog crate.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
sentry-core = { workspace = true }
slog = { workspace = true, features = ["nested-values"] }
serde_json = { workspace = true }

[dev-dependencies]
sentry = { workspace = true, features = ["test"] }
serde = { workspace = true }
erased-serde = { workspace = true }
