[package]
name = "sentry-tower"
version = "0.37.0"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Sentry integration for tower-based crates.
"""
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["release-health"]
http = ["dep:http", "pin-project", "url"]
axum-matched-path = ["http", "axum/matched-path"]
release-health = ["sentry-core/release-health"]

[dependencies]
axum = { version = "0.8", optional = true, default-features = false }
tower-layer = "0.3"
tower-service = "0.3"
http = { version = "1.0.0", optional = true }
pin-project = { version = "1.0.10", optional = true }
sentry-core = { version = "0.37.0", path = "../sentry-core", default-features = false, features = [
    "client",
] }
url = { version = "2.2.2", optional = true }

[dev-dependencies]
anyhow = "1"
prost = "0.13.3"
sentry = { path = "../sentry", default-features = false, features = ["test"] }
sentry-anyhow = { path = "../sentry-anyhow" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
tower = { version = "0.4", features = ["util", "timeout"] }
