[package]
name = "sentry-tower"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for tower-based crates.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
http = ["dep:http", "pin-project", "url"]
axum-matched-path = ["http", "axum/matched-path"]

[dependencies]
axum = { workspace = true, optional = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
http = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
sentry-core = { version = "0.48.5", path = "../sentry-core", default-features = false, features = [
    "client",
] }
url = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
sentry = { workspace = true, features = ["test"] }
sentry-anyhow = { path = "../sentry-anyhow" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true, features = ["transport"] }
tower = { workspace = true, features = ["util", "timeout"] }
