[package]
name = "sentry-tracing"
version = "0.46.2"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for the tracing and tracing-subscriber crates.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
backtrace = ["dep:sentry-backtrace"]
logs = ["sentry-core/logs"]

[dependencies]
sentry-core = { version = "0.46.2", path = "../sentry-core", features = [
    "client",
] }
tracing-core = "0.1"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "std",
] }
sentry-backtrace = { version = "0.46.2", path = "../sentry-backtrace", optional = true }
bitflags = "2.9.4"

[dev-dependencies]
log = "0.4"
sentry = { path = "../sentry", default-features = false, features = ["test", "tracing"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "registry"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
criterion = "0.8.2"

[[bench]]
name = "tracing_layer_perf"
harness = false
